persistedvolme.yaml
---
apiVersion: v1 
kind: Pod
metadata: 
  name: hema
  labels: 
    app: caddy
    env: production
spec:
  containers:
    - name: hema
      image: mysql:8.0
      ports:
        - name: hema
          containerPort: 3306
          protocol: TCP
      volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
  volumes: 
    - name: mysql-volume
      persistentVolumeClaim: 
        claimName: mysql-pvc
