stateful.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: caddy
  labels:
    app: mongo
spec:
  minReadySeconds: 3
  replicas: 2
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  template:
    metadata:
      name: mongo
      labels: 
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:7.0.5-rc0
          command: ["mongod",--bind_ip","0.0.0.0","--replSet","rs0"]
          args: ["-dbpath","/data/db"]
          ports:
            - containerPort: 27017
              protocol: TCP
          resources:
            requests:
              cpu: 1
              memory: 8Gi
  volumeClaimTemplates:
    - metadata:
        name: mongo 
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: managed 
        resources:
          requests:
            cpu: 1
            memory: 2Gi      
---
apiVersion: v1 
kind: Service
metadata: 
  name: mango
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
   - targetPort: 27017
     protocol: TCP
     nodePort: 30000
     port: 27017
