ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog
  labels:
    env: dev
    app: caddy
spec:
  rules:
    - host: 
      http:
        paths:
          - path:
            pathType:
            backend:
              resource: 
                kind:
                name:
                apiGroup:
              service: 
                name:
                port: 
                  name: 
                  number:
